# hlsocket

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  hlsocketConfig.cmake
.github/workflows/: ci.yml
docs/: README.md
examples/: server.pem  test.c
include/: hlsocket.h  hlsocket_platform.h  hlsocket_selector.h  url.h
src/: common.hpp  hlsocket.cpp  hlsocket.inl  hlsocket_selector.inl  hlsocket_selector_darwin.cpp  hlsocket_selector_emcc.cpp  hlsocket_selector_posix.cpp  hlsocket_selector_win.cpp  hlsocket_ssl.inl  hlsocket_ws.inl  url.cpp
